--- a/.conkyrc
+++ b/.conkyrc
@@ -13,7 +13,7 @@ override_utf8_locale yes
 TEXT
 
 [
-  { "full_text" : "Now Playing" , "color" : "\#cc0000" } ,
+  { "full_text" : "${if_mpd_playing}Now Playing${else}MPD${endif}" , "color" : "\#CC0000" } ,
   { "full_text" : "${if_mpd_playing}${mpd_smart 50} ${mpd_elapsed}/${mpd_length}${else}${mpd_status}${endif}" ,
     "color" : "\#d3d7cf"
   } ,
@@ -32,7 +32,7 @@ TEXT
     "color" : "\#d3d7cf"
   } ,
 
-  { "full_text" : "Volume ${exec amixer -c 0 get Master | grep -oE [[:digit:]]*% }" ,
+  { "full_text" : "Volume ${exec amixer -M -c 0 get Master | grep -oE [[:digit:]]*% }" ,
     "color" : "\#c4a000"
   } ,
 
